--- a/1.html
+++ b/1.html
@@ -3,7 +3,7 @@
 The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser. 
 It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.
 Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. 
-HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
+HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.<img src="다운로드.jpeg"></p>
 <p style="margin-top:45px;">HTML elements are the building blocks of HTML pages. With HTML constructs, 
 images and other objects such as interactive forms may be embedded into the rendered page. 
 HTML provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, 
