--- a/1.html
+++ b/1.html
@@ -3,16 +3,26 @@
 <head>
     <title>WEB1 - html</title>
     <meta charset="utf-8">
+<style>
+    a {
+        color: black;
+        text-decoration: none;
+    }
+
+    h1 {
+        font-size: 80px;
+    }
+</style>
 </head>
- 
 <body>
     <h1><a href="index.html">WEB</a></h1>
     <ol>
-        <li><a href="1.html">HTML</a></li>
+        <li><a href="1.html" style="color:red; text-decoration: underline;">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
-    </ol> 
-    <h2>HTML</h2>
+    </ol>
+<body>
+   <h2>HTML</h2>
     <p><a href="https://ko.wikipedia.org/wiki/HTML" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> is the standard markup languae for <strong>creating <u>web</u> pages</strong> and
         web applications.
         The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a
@@ -22,7 +32,7 @@
         web pages.<a href="">
         HTML describes the structure of a web page semantically and originally included cues for the appearance of the
         document.
-        <img src="/Users/gimseongu/Downloads/다운로드.jpeg" width="30%">
+        <img src="/Users/gimseongu/Downloads/코딩.jpeg" width="10%">
     </p>
     <p style="margin-top:45px;">HTML elements are the building blocks of HTML pages. With HTML constructs,
         images and other objects such as interactive forms may be embedded into the rendered page.
