--- a/1.html
+++ b/1.html
@@ -1,19 +1,21 @@
 <!doctype html>
 <html>
+
 <head>
     <title>WEB1 - html</title>
     <meta charset="utf-8">
-<style>
-    a {
-        color: black;
-        text-decoration: none;
-    }
+    <style>
+        a {
+            color: black;
+            text-decoration: none;
+        }
 
-    h1 {
-        font-size: 80px;
-    }
-</style>
+        h1 {
+            font-size: 45px;
+        }
+    </style>
 </head>
+
 <body>
     <h1><a href="index.html">WEB</a></h1>
     <ol>
@@ -21,23 +23,32 @@
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
     </ol>
-<body>
-   <h2>HTML</h2>
-    <p><a href="https://ko.wikipedia.org/wiki/HTML" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> is the standard markup languae for <strong>creating <u>web</u> pages</strong> and
-        web applications.
-        The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a
-        web browser. 
-        It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.
-        Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia
-        web pages.<a href="">
-        HTML describes the structure of a web page semantically and originally included cues for the appearance of the
-        document.
-        <img src="/Users/gimseongu/Downloads/코딩.jpeg" width="10%">
-    </p>
-    <p style="margin-top:45px;">HTML elements are the building blocks of HTML pages. With HTML constructs,
-        images and other objects such as interactive forms may be embedded into the rendered page.
-        HTML provides a means to create structured documents by denoting structural semantics for text such as headings,
-        paragraphs,
-        lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.</p>
-</body>
+
+    <body>
+        <h2>HTML</h2>
+        <p><a href="https://ko.wikipedia.org/wiki/HTML" target="_blank" title="html5 specification">Hypertext Markup
+                Language (HTML)</a> is the standard markup languae for <strong>creating <u>web</u> pages</strong> and
+            web applications.
+            The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed
+            in a
+            web browser.
+            It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as
+            JavaScript.
+            Web browsers receive HTML documents from a web server or from local storage and render the documents into
+            multimedia
+            web pages.<a href="">
+                HTML describes the structure of a web page semantically and originally included cues for the appearance
+                of the
+                document.
+                <img src="/Users/gimseongu/Downloads/코딩.jpeg" width="10%">
+        </p>
+        <p style="margin-top:45px;">HTML elements are the building blocks of HTML pages. With HTML constructs,
+            images and other objects such as interactive forms may be embedded into the rendered page.
+            HTML provides a means to create structured documents by denoting structural semantics for text such as
+            headings,
+            paragraphs,
+            lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.
+        </p>
+    </body>
+
 </html>
