--- a/2.html
+++ b/2.html
@@ -1,33 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>WEB1 - CSS</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <style>
-        a {
-            color: black;
-            text-decoration: none;
-        }
-
-        h1 {
-            font-size: 45px;
-            text-align: center;
-        }
+      a {
+        color: black;
+        text-decoration: none;
+      }
+      #active {
+        color: red;
+      }
+      .saw {
+        color: gray;
+      }
+      h1 {
+        font-size: 45px;
+        text-align: center;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1><a href="index.html">WEB</a></h1>
     <ol>
-        <li><a href="1.html">HTML</a></li>
-        <li><a href="2.html" style="color:red; text-decoration:underline">CSS</a></li>
-        <li><a href="3.html">JavaScript</a></li>
+      <li><a href="1.html" class="saw">HTML</a></li>
+      <li><a href="2.html" class="saw" id="active">CSS</a></li>
+      <li><a href="3.html">JavaScript</a></li>
     </ol>
     <h2>CSS</h2>
-    <p>CSS is the language we use to style an HTML document.CSS describes how HTML elements should be displayed.This
-        tutorial will teach you CSS from basic to advanced.
+    <p>
+      CSS is the language we use to style an HTML document.CSS describes how
+      HTML elements should be displayed.This tutorial will teach you CSS from
+      basic to advanced.
     </p>
-</body>
-
+  </body>
 </html>
