--- a/2.html
+++ b/2.html
@@ -14,9 +14,21 @@
       .saw {
         color: gray;
       }
+      body {
+        margin: 0;
+      }
       h1 {
         font-size: 45px;
         text-align: center;
+        border-bottom: 1px solid gray;
+        margin: 0%;
+        padding-bottom: 20px;
+      }
+      ol {
+        border-right: 1px solid gray;
+        width: 100px;
+        margin: 0%;
+        padding: 20px;
       }
     </style>
   </head>
