--- a/3.html
+++ b/3.html
@@ -27,7 +27,7 @@
       유사성이 많다. 자바스크립트는 ECMA스크립트(ECMAScript)의 표준 사양을 가장
       잘 구현한 언어로 인정받고 있으며 ECMAScript 5(ES5)까지는 대부분의
       브라우저에서 기본적으로 지원되었으나 ECMAScript 6 이후부터는 브라우저
-      호환성을 위해 트랜스파일러로 컴파일된다.[4]
+      호환성을 위해 트랜스파일러로 컴파일된다.[4] ㅇ
     </p>
   </body>
 </html>
