--- a/grid.html
+++ b/grid.html
@@ -10,14 +10,14 @@
         }
         div {
             border: 5px solid gray;
+
         }
     </style>
 </head>
 <body>
     <div id="grid">
         <div>NAVIGATION</div> 
-        <div>ARTICLE</div>
-        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. In neque nam quidem distinctio quo consectetur ipsum. Quisquam nam voluptatibus harum, voluptatum, tempora sunt cupiditate, qui quo sed recusandae eum eius!</div>
-    </div> 
+        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, similique tempora. Ea ipsa perspiciatis possimus, quia repudiandae et, odit sunt voluptatem dolores magnam nostrum vero beatae similique molestiae odio fugiat!</div>
+    </div>    
 </body>
-</html>
+</html> 
