--- a/2.html
+++ b/2.html
@@ -15,7 +15,7 @@
         color: gray;
       }
       body {
-        margin: 0;
+        margin: 0%;
       }
       h1 {
         font-size: 45px;
@@ -30,21 +30,29 @@
         margin: 0%;
         padding: 20px;
       }
+      #grid {
+        display: grid;
+        grid-template-columns: 150px 1fr;
+      }
     </style>
   </head>
 
   <body>
     <h1><a href="index.html">WEB</a></h1>
-    <ol>
-      <li><a href="1.html" class="saw">HTML</a></li>
-      <li><a href="2.html" class="saw" id="active">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
-    </ol>
-    <h2>CSS</h2>
-    <p>
-      CSS is the language we use to style an HTML document.CSS describes how
-      HTML elements should be displayed.This tutorial will teach you CSS from
-      basic to advanced.
-    </p>
+    <div id="gird">
+      <ol>
+        <li><a href="1.html" class="saw">HTML</a></li>
+        <li><a href="2.html" class="saw" id="active">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
+      </ol>
+      <div>
+        <h2>CSS</h2>
+        <p>
+          CSS is the language we use to style an HTML document.CSS describes how
+          HTML elements should be displayed.This tutorial will teach you CSS
+          from basic to advanced.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
