--- a/2.html
+++ b/2.html
@@ -3,54 +3,27 @@
   <head>
     <title>WEB1 - CSS</title>
     <meta charset="utf-8" />
-    <style>
-      a {
-        color: black;
-        text-decoration: none;
-      }
-      #active {
-        color: red;
-      }
-      .saw {
-        color: gray;
-      }
-      body {
-        margin: 0%;
-      }
-      h1 {
-        font-size: 45px;
-        text-align: center;
-        border-bottom: 1px solid gray;
-        margin: 0%;
-        padding-bottom: 20px;
-      }
-      ol {
-        border-right: 1px solid gray;
-        width: 100px;
-        margin: 0%;
-        padding: 20px;
-      }
-      #grid {
-        display: grid;
-        grid-template-columns: 150px 1fr;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <h1><a href="index.html">WEB</a></h1>
-    <div id="gird">
+    <div id="grid">
       <ol>
-        <li><a href="1.html" class="saw">HTML</a></li>
-        <li><a href="2.html" class="saw" id="active">CSS</a></li>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
       </ol>
-      <div>
+      <div id="article">
         <h2>CSS</h2>
         <p>
-          CSS is the language we use to style an HTML document.CSS describes how
-          HTML elements should be displayed.This tutorial will teach you CSS
-          from basic to advanced.
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab sunt nisi
+          praesentium facilis quidem perspiciatis corrupti tempore, numquam sed
+          deleniti minus velit at corporis, iste iure, quaerat harum aperiam
+          minima.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab
+          sunt nisi praesentium facilis quidem perspiciatis corrupti tempore,
+          numquam sed deleniti minus velit at corporis, iste iure, quaerat harum
+          aperiam minima.
         </p>
       </div>
     </div>
